@@ -15,7 +15,7 @@ namespace Mercator {
     float HOT(const Terrain &t, const WFMath::Point<3> &pt);
 
     bool Intersect(const Terrain &t, const WFMath::Point<3> &sPt, const WFMath::Vector<3>& dir,
-            WFMath::Point<3> &intersection, WFMath::Vector<3> &normal);
+            WFMath::Point<3> &intersection, WFMath::Vector<3> &normal, float &par);
 } // namespace Mercator
 
 #endif
